# intern_task

./: pyproject.toml  req.txt
backend/: req.txt
backend/app/: config.py  main.py  ocr_cache.pkl
backend/app/api/: routers.py
backend/app/api/endpoints/: document_api.py  query_api.py
backend/app/core/: cache.py  database_api.py  logger.py
backend/app/models/: api_models.py  lang_graph.py  states.py
backend/app/services/: embedding.py  query.py
backend/data/: dataloader.py  ocr_cache.pkl  ocr_extract.py
test/: databaseconnection_test.py
